# Serval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: build-binaries.yml  docker-publish.yml  integration-tests.yml  performance-harness.yml  pr-quality-gate.yml
benches/: data_plane_hot_path.rs
docs/agents/: database.md  delivery.md  engineering-standards.md  frontend.md  profiling.md  testing.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  AuthProvider.tsx  Dashboard.tsx  Layout.tsx  OAuthCallback.tsx  SignIn.tsx  SnippetDetail.tsx  api.ts  auth-context.ts  content-types.ts  index.css  main.tsx  oidc.ts  prefetch.ts  ui.tsx  vite-env.d.ts
frontend/src/ui/: Badge.tsx  Button.tsx  Card.tsx  Combobox.tsx  CopyButton.tsx  InlineField.tsx  feedback.tsx  form.tsx  icons.tsx  index.ts
src/: cache.rs  config.rs  crypto.rs  lib.rs  main.rs  renderer.rs  state.rs
src/api/: error.rs  extract.rs  handlers.rs  mod.rs  pagination.rs  static_files.rs
src/auth/: jwt.rs  mod.rs  oauth.rs
src/db/: mod.rs  models.rs  repo.rs  schema.rs
src/delivery/: mod.rs
tests/: acceptance.rs  performance_harness.rs
tests/performance_harness/: profiling.rs
